--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Compleci\u00F3 de l'activitat
 
 BOXPLOT = Diagramacaja
 
+BOXPLOT.xAxisTitle = Els elements de qualificaci\u00F3
+BOXPLOT.yAxisTitle = Noten
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Els elements de qualificaci\u00F3
+CALIFICATION_BAR.yAxisTitle = Inscrits usuari #
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Registres
 
 GRADE_REPORT_TABLE = Graus
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = L\u00EDnies
 
+LINE.xAxisTitle = Els elements de qualificaci\u00F3
+LINE.yAxisTitle = Noten
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Registres
 
 RADAR = Radar
 
 STACKED_BAR = Barres Apilades
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Registres
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Els elements de qualificaci\u00F3
+VIOLIN.yAxisTitle = Noten
+
+borderLength = ample de l\u00EDnia
+
+borderSpace = Espai entre l\u00EDnies
 
 btn.clear    = Clar
 btn.enter    = Introdu\u00EFu
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Tancar sessi\u00F3
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = calcular m\u00E0xim
 
 chart.mean                = Significar
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Mesos
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Setmanes
 
+cutGrade = Grau de passi
+
+displayXScaleTitle = T\u00EDtol de l'eix X
+
+displayYScaleTitle = T\u00EDtol de l'eix I
+
+emptyGradeColor = El color de grau buida
+
 error.fields            = Heu de completar tots els camps.
 error.generateCharts    = No es poden generar gr\u00E0fics.
 error.generatedataset   = S'ha produ\u00EFt un error en construir el conjunt de dades.
@@ -90,9 +127,33 @@ error.savecsvfiles      = No s'han pogut exportar les dades en format CSV.
 error.updateofflinemode = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
 error.userdata          = Error en recuperar les dades de l'usuari.
 
+failGradeColor = A falta de color de grau
+
+firstInterval = primer interval
+
+fontColorXScaleTitle = Color de font eix X
+
+fontColorYScaleTitle = Color de font eix I
+
+fourthInterval = quart interval
+
+generalActive = estad\u00EDstiques generals
+
+groupActive = Estad\u00EDstiques dels grups
+
 header.passwordChangedMessage   = S'ha detectat la contrasenya
 header.passwordDateTime         = Contrasenya de data anterior:
 header.passwordIncorrectMessage = Contrasenya incorrecta
+
+horizontalMode = la manera horitzontal
+
+initialGroups = grups inicials
+
+initialLastActivity = \u00DAltimes connexions
+
+initialRoles = Els rols inicials
+
+initialTypeTimes = unitat de temps predeterminat
 
 label.activity                    = \u00DAltima connexi\u00F3:
 label.categoryitem                = Categoria / article:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
-label.participants                = Participants
+label.participants                = N\u00BA Participants
 label.pass                        = Contrasenya:
 label.rol                         = Rol:
 label.savelocal                   = S'est\u00E0 desant en local ...
@@ -130,6 +191,8 @@ label.user                        = Usuari:
 label.welcome                     = Benvinguda
 label.withcompletion              = Completed Act.
 label.withhidden                  = Amb ocults
+
+legendActive = Llegenda de l'gr\u00E0fic
 
 log.component.activity_report                                   = Informe d'activitat
 log.component.assignment                                        = Tasca
@@ -586,7 +649,7 @@ menu.edit           = Edita
 menu.exit           = Sortir
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exportar CSV...
-menu.file           = Dossier
+menu.file           = _Dossier
 menu.help           = Ajuda
 menu.importconfig   = Import configuration...
 menu.logout         = Tancar sessi\u00F3
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Taller
 
+moreMax = M\u00E0xim
+
+passGradeColor = Passant el color de grau
+
+secondInterval = segon interval
+
 tab.activityCompletion = Compleci\u00F3 de l'activitat
 tab.component          = Components
 tab.coursemodule       = M\u00F2duls del curs
@@ -629,6 +698,7 @@ tab.event              = Esdeveniments
 tab.grades             = Graus
 tab.logs               = Registres
 tab.section            = Secci\u00F3
+tab.visualization      = Visual analytic
 
 text.all                = Tots
 text.betweendates       = Between {0} and {1} 
@@ -657,7 +727,17 @@ text.stats              = Estad\u00EDstiques
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = Tercer interval
+
 title.passwordChanged   = S'ha canviat la contrasenya
 title.passwordIncorrect = Contrasenya incorrecta
 
 tooltip.insecureprotocol = Aquesta connexi\u00F3 no \u00E9s segura.\r\nLes credencials es poden veure compromeses.
+
+tooltipDecimals = informaci\u00F3 sobre eines decimal
+
+zeroLineColor = color de la l\u00EDnia zero
+
+zeroLineWidth = ample de l\u00EDnia Zero
+
+zeroValue = valor zero
