--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Aktivit\u00E4tsabschluss
 
 BOXPLOT = BoxPlot
 
+BOXPLOT.xAxisTitle = Grade Artikel
+BOXPLOT.yAxisTitle = Grades
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Grade Artikel
+CALIFICATION_BAR.yAxisTitle = Eingeschriebene Benutzer #
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Logs
 
 GRADE_REPORT_TABLE = Noten
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = Linien
 
+LINE.xAxisTitle = Grade Artikel
+LINE.yAxisTitle = Grades
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
 STACKED_BAR = Stacked Bar
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Logs
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Grade Artikel
+VIOLIN.yAxisTitle = Grades
+
+borderLength = Linienbreite
+
+borderSpace = Zeilenabstand
 
 btn.clear    = klar
 btn.enter    = Eingeben
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Ausloggen
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = berechnen Sie max
 
 chart.mean                = Bedeuten
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
 choiceBox.YEAR_WEEK    = Wochen
 
+cutGrade = Grade zu Pass
+
+displayXScaleTitle = Titel X-Achse
+
+displayYScaleTitle = Titel der Y-Achse
+
+emptyGradeColor = Farbe leer Grad
+
 error.fields            = Sie m\u00FCssen alle Felder ausf\u00FCllen.
 error.generateCharts    = Diagramme k\u00F6nnen nicht generiert werden.
 error.generatedataset   = Fehler beim Erstellen des Datasets.
@@ -90,9 +127,33 @@ error.savecsvfiles      = Die Daten konnten nicht im CSV-Format exportiert werde
 error.updateofflinemode = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
 error.userdata          = Fehler beim Wiederherstellen der Benutzerdaten.
 
+failGradeColor = Failing Grade Farbe
+
+firstInterval = erstes Intervall
+
+fontColorXScaleTitle = Schriftfarbe X-Achse
+
+fontColorYScaleTitle = Schriftfarbe Y-Achse
+
+fourthInterval = vierte Intervall
+
+generalActive = Allgemeine Statistiken
+
+groupActive = Gruppenstatistiken
+
 header.passwordChangedMessage   = Gefunden wurde ein ge\u00E4ndertes Passwort
 header.passwordDateTime         = Passwort f\u00FCr das vorherige Datum:
 header.passwordIncorrectMessage = Falsches Passwort
+
+horizontalMode = Horizontal-Modus
+
+initialGroups = Erste Gruppen
+
+initialLastActivity = Letzte Verbindungen
+
+initialRoles = Erste Rollen
+
+initialTypeTimes = Standardzeiteinheit
 
 label.activity                    = Letzte Verbindung:
 label.categoryitem                = Kategorie / Gegenstand:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
-label.participants                = Teilnehmer
+label.participants                = N\u00BA Teilnehmer
 label.pass                        = Passwort:
 label.rol                         = Rol:
 label.savelocal                   = Speichern in lokaler ...
@@ -130,6 +191,8 @@ label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
 label.withcompletion              = Completed Act.
 label.withhidden                  = Mit verstecktem
+
+legendActive = Diagrammlegende
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
 log.component.assignment                                        = Aufgabe
@@ -586,7 +649,7 @@ menu.edit           = Bearbeiten
 menu.exit           = Ausgang
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = CSV-Daten exportieren...
-menu.file           = Datei
+menu.file           = _Datei
 menu.help           = Hilfe
 menu.importconfig   = Import configuration...
 menu.logout         = Ausloggen
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Werkstatt
 
+moreMax = Maximal
+
+passGradeColor = Passing Grad Farbe
+
+secondInterval = Sekunden-Intervall
+
 tab.activityCompletion = Aktivit\u00E4tsabschluss
 tab.component          = Komponenten
 tab.coursemodule       = Kursmodule
@@ -629,6 +698,7 @@ tab.event              = Veranstaltungen
 tab.grades             = Noten
 tab.logs               = Protokolle
 tab.section            = Abschnitt
+tab.visualization      = Visual analytic
 
 text.all                = Alles
 text.betweendates       = Between {0} and {1}
@@ -657,7 +727,17 @@ text.stats              = Kursstatistiken
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = Terz
+
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
 
 tooltip.insecureprotocol = Diese Verbindung ist nicht sicher.\r\nAnmeldeinformationen sind m\u00F6glicherweise kompromittiert.
+
+tooltipDecimals = dezimal Tooltip
+
+zeroLineColor = Nullinie Farbe
+
+zeroLineWidth = Nulllinienbreite
+
+zeroValue = Nullwert
