--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Activity Completion
 
 BOXPLOT = Boxplot
 
+BOXPLOT.xAxisTitle = Grade items
+BOXPLOT.yAxisTitle = Grades
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Grade items
+CALIFICATION_BAR.yAxisTitle = Enrolled user #
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Logs
 
 GRADE_REPORT_TABLE = Grades
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = Lines
 
+LINE.xAxisTitle = Grade items
+LINE.yAxisTitle = Grades
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
 STACKED_BAR = Stacked Bar
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Logs
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Grade items
+VIOLIN.yAxisTitle = Grades
+
+borderLength = Line width
+
+borderSpace = Line spacing
 
 btn.clear    = Clear
 btn.enter    = Enter
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Logout
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = Calculate max
 
 chart.mean                = Mean
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
+cutGrade = Grade to pass
+
+displayXScaleTitle = Title X-axis
+
+displayYScaleTitle = Title Y-axis
+
+emptyGradeColor = Color empty grade
+
 error.fields            = You have to complete all the fields.
 error.generateCharts    = Can't generate charts.
 error.generatedataset   = Error building the dataset.
@@ -90,9 +127,33 @@ error.savecsvfiles      = The data could not be exported in CSV format.
 error.updateofflinemode = The course cannot be updated in offline mode. Please log out and log back in online mode.
 error.userdata          = Error when recovering user data.
 
+failGradeColor = Failing grade color
+
+firstInterval = First interval
+
+fontColorXScaleTitle = Font color X-axis
+
+fontColorYScaleTitle = Font color Y-axis
+
+fourthInterval = Fourth interval
+
+generalActive = General statistics
+
+groupActive = Group statistics
+
 header.passwordChangedMessage   = Detected was password changed
 header.passwordDateTime         = Previous date password: 
 header.passwordIncorrectMessage = Password incorrect
+
+horizontalMode = Horizontal mode
+
+initialGroups = Initial Groups
+
+initialLastActivity = Last connections
+
+initialRoles = Initial Roles
+
+initialTypeTimes = Default time unit
 
 label.activity                    = Last connect.:
 label.categoryitem                = Category/Item:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
-label.participants                = Participants
+label.participants                = N\u00BA Participants
 label.pass                        = Password:
 label.rol                         = Rol:
 label.savelocal                   = Saving in local...
@@ -130,6 +191,8 @@ label.user                        = User:
 label.welcome                     = Welcome
 label.withcompletion              = Completed Act.
 label.withhidden                  = With hidden
+
+legendActive = Chart legend
 
 log.component.activity_report                                   = Activity report
 log.component.assignment                                        = Assignment
@@ -580,13 +643,13 @@ log.event.zip_archive_of_folder_downloaded                      = Zip archive of
 
 menu.about          = About application
 menu.changeconfig   = Change configuration
-menu.changesubject  = Change Subject
+menu.changesubject  = _Change subject
 menu.clearselection = Clear selection
 menu.edit           = Edit
 menu.exit           = Exit
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Export CSV data...
-menu.file           = File
+menu.file           = _File
 menu.help           = Help
 menu.importconfig   = Import configuration...
 menu.logout         = Logout
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Workshop
 
+moreMax = Maximum
+
+passGradeColor = Passing grade color
+
+secondInterval = Second interval
+
 tab.activityCompletion = Activity Completion
 tab.component          = Components
 tab.coursemodule       = Course Modules
@@ -629,6 +698,7 @@ tab.event              = Events
 tab.grades             = Grades
 tab.logs               = Logs
 tab.section            = Sections
+tab.visualization      = Visual analytic
 
 text.all                = All
 text.betweendates       = Between {0} and {1}
@@ -657,7 +727,17 @@ text.stats              = Statistics
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = Third interval
+
 title.passwordChanged   = Password was changed
 title.passwordIncorrect = Password incorrect
 
 tooltip.insecureprotocol = This connection is not secure.\r\nCredentials may be compromised.
+
+tooltipDecimals = Decimal tooltip
+
+zeroLineColor = Zero line color
+
+zeroLineWidth = Zero line width
+
+zeroValue = Zero value
