--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Finalizaci\u00F3n Actividad
 
 BOXPLOT = Boxplot
 
+BOXPLOT.xAxisTitle = \u00CDtems de calificaci\u00F3n
+BOXPLOT.yAxisTitle = Calificaciones
+
 CALIFICATION_BAR = Calificaciones %
 
+CALIFICATION_BAR.xAxisTitle = \u00CDtems de calificaci\u00F3n
+CALIFICATION_BAR.yAxisTitle = Usuarios matriculados #
+
 CUM_LINE = Acumulados
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Registros
 
 GRADE_REPORT_TABLE = Calificaciones
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin de Grupos
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = L\u00EDneas
 
+LINE.xAxisTitle = \u00CDtems de calificaci\u00F3n
+LINE.yAxisTitle = Calificaciones
+
 MEAN_DIFF = Acum. Relativos
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Registros
 
 RADAR = Radar
 
 STACKED_BAR = Barras Apiladas
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Registros
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = \u00CDtems de calificaci\u00F3n
+VIOLIN.yAxisTitle = Calificaciones
+
+borderLength = Ancho de l\u00EDnea
+
+borderSpace = Espaciado entre l\u00EDneas
 
 btn.clear    = Borrar
 btn.enter    = Entrar
@@ -43,6 +70,8 @@ button.apply   = Aplicar
 button.logout  = Cerrar sesi\u00F3n
 button.restore = Restaurar valores por defecto
 button.save    = Guardar
+
+calculateMax = Calcular m\u00E1ximo
 
 chart.mean                = Media
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
+cutGrade = Nota de corte
+
+displayXScaleTitle = T\u00EDtulo del eje X
+
+displayYScaleTitle = T\u00EDtulo del eje Y
+
+emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
+
 error.fields            = Debes completar todos los campos.
 error.generateCharts    = No se han podido generar los gr\u00E1ficos.
 error.generatedataset   = Error en la construcci\u00F3n del dataset.
@@ -90,9 +127,33 @@ error.savecsvfiles      = No se han podido exportar los datos en formato CSV.
 error.updateofflinemode = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
 error.userdata          = Error al recuperar los datos del usuario.
 
+failGradeColor = Color de calificaci\u00F3n suspensa
+
+firstInterval = Primer intervalo
+
+fontColorXScaleTitle = Color de fuente eje X
+
+fontColorYScaleTitle = Color de fuente eje Y
+
+fourthInterval = Cuarto intervalo
+
+generalActive = Estad\u00EDsticas Generales
+
+groupActive = Estad\u00EDsticas de grupos
+
 header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
+
+horizontalMode = Modo horizontal
+
+initialGroups = Grupos iniciales
+
+initialLastActivity = \u00DAltimas conexiones
+
+initialRoles = Roles Iniciales
+
+initialTypeTimes = Unidad de tiempo predeterminado
 
 label.activity                    = \u00DAlt. conex.:
 label.categoryitem                = Categor\u00EDa/Item:
@@ -116,7 +177,7 @@ label.loggedin                    = Inicio sesi\u00F3n:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
-label.participants                = Participantes
+label.participants                = N\u00BA Participantes
 label.pass                        = Contrase\u00F1a:
 label.rol                         = Rol:
 label.savelocal                   = Guardando en local...
@@ -130,6 +191,8 @@ label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
 label.withcompletion              = Act. Complet.
 label.withhidden                  = Con ocultos
+
+legendActive = Leyenda del gr\u00E1fico
 
 log.component.activity_report                                   = Actividad del curso
 log.component.assignment                                        = Tarea
@@ -580,13 +643,13 @@ log.event.zip_archive_of_folder_downloaded                      = Directorio des
 
 menu.about          = Acerca de la aplicaci\u00F3n
 menu.changeconfig   = Cambiar configuraci\u00F3n
-menu.changesubject  = Cambiar Asignatura
+menu.changesubject  = _Cambiar asignatura
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
 menu.exit           = Salir
 menu.exportconfig   = Exportar configuraci\u00F3n...
 menu.exportcsv      = Exportar datos CSV...
-menu.file           = Archivo
+menu.file           = _Archivo
 menu.help           = Ayuda
 menu.importconfig   = Importar configuraci\u00F3n...
 menu.logout         = Cerrar sesi\u00F3n
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Taller
 
+moreMax = M\u00E1ximo
+
+passGradeColor = Color de calificaci\u00F3n aprobada
+
+secondInterval = Segundo intervalo
+
 tab.activityCompletion = Finalizaci\u00F3n Actividad
 tab.component          = Componentes
 tab.coursemodule       = M\u00F3dulos curso
@@ -629,6 +698,7 @@ tab.event              = Eventos
 tab.grades             = Calificaciones
 tab.logs               = Registros
 tab.section            = Secci\u00F3n
+tab.visualization      = An\u00E1lisis visual
 
 text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
@@ -657,7 +727,17 @@ text.stats              = Estad\u00EDsticas
 text.withconnection     = Modo: Online
 text.withoutconnection  = Modo: Offline
 
+thirdInterval = Tercer intervalo
+
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
 
 tooltip.insecureprotocol = Esta conexi\u00F3n no es segura.\nLas credenciales pueden verse comprometidas.
+
+tooltipDecimals = Informaci\u00F3n de decimales
+
+zeroLineColor = Color de la l\u00EDnea cero
+
+zeroLineWidth = Ancho de l\u00EDnea cero
+
+zeroValue = Valor cero
