--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Completamento attivit\u00E0
 
 BOXPLOT = Boxplot
 
+BOXPLOT.xAxisTitle = Alementi del grado
+BOXPLOT.yAxisTitle = Gradi
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Alementi del grado
+CALIFICATION_BAR.yAxisTitle = Iscritta utente #
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Logs
 
 GRADE_REPORT_TABLE = Gradi
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = Linee
 
+LINE.xAxisTitle = Alementi del grado
+LINE.yAxisTitle = Gradi
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
 STACKED_BAR = A Barre In Pila
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Logs
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Alementi del grado
+VIOLIN.yAxisTitle = Gradi
+
+borderLength = Larghezza della linea
+
+borderSpace = Interlinea
 
 btn.clear    = Chiaro
 btn.enter    = accedere
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Disconnettersi
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = Calcolare max
 
 chart.mean                = Significare
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = mesi
 choiceBox.YEAR_QUARTER = alloggio
 choiceBox.YEAR_WEEK    = settimane
 
+cutGrade = Grado di passaggio
+
+displayXScaleTitle = Titolo asse X
+
+displayYScaleTitle = Titolo asse Y
+
+emptyGradeColor = Colore grade vuoto
+
 error.fields            = Devi completare tutti i campi.
 error.generateCharts    = Non posso generare grafici.
 error.generatedataset   = Errore durante la creazione del set di dati.
@@ -90,9 +127,33 @@ error.savecsvfiles      = I dati non possono essere esportati in formato CSV.
 error.updateofflinemode = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
 error.userdata          = Errore durante il recupero dei dati dell'utente.
 
+failGradeColor = In mancanza di colore di grado
+
+firstInterval = primo intervallo
+
+fontColorXScaleTitle = Colore carattere asse X
+
+fontColorYScaleTitle = Carattere di colore Y
+
+fourthInterval = quarto intervallo
+
+generalActive = statistiche generali
+
+groupActive = Statistiche gironi
+
 header.passwordChangedMessage   = Rilevato \u00E8 stata modificata la password
 header.passwordDateTime         = Data precedente password:
 header.passwordIncorrectMessage = Password non corretta
+
+horizontalMode = modalit\u00E0 orizzontale
+
+initialGroups = Gruppi iniziali
+
+initialLastActivity = ultimi connessioni
+
+initialRoles = Ruoli iniziali
+
+initialTypeTimes = unit\u00E0 di tempo predefinito
 
 label.activity                    = Ultima connessione:
 label.categoryitem                = Categoria / Articolo:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
-label.participants                = partecipanti
+label.participants                = N\u00BA partecipanti
 label.pass                        = La password:
 label.rol                         = Rol:
 label.savelocal                   = Salvataggio in locale ...
@@ -130,6 +191,8 @@ label.user                        = Utente:
 label.welcome                     = Benvenuto
 label.withcompletion              = Completed Act.
 label.withhidden                  = Con nascosto
+
+legendActive = Grafico leggenda
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
 log.component.assignment                                        = Compito
@@ -586,7 +649,7 @@ menu.edit           = modificare
 menu.exit           = Uscita
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Esporta dati CSV...
-menu.file           = File
+menu.file           = _File
 menu.help           = Aiuto
 menu.importconfig   = Import configuration...
 menu.logout         = Disconnettersi
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = wiki
 module.workshop    = laboratorio
 
+moreMax = Massimo
+
+passGradeColor = Passando colore grade
+
+secondInterval = Secondo intervallo
+
 tab.activityCompletion = Completamento attivit\u00E0
 tab.component          = componenti
 tab.coursemodule       = Moduli del corso
@@ -629,6 +698,7 @@ tab.event              = eventi
 tab.grades             = gradi
 tab.logs               = logs
 tab.section            = Sezione
+tab.visualization      = Visual analytic
 
 text.all                = Tutti
 text.betweendates       = Between {0} and {1}
@@ -657,7 +727,17 @@ text.stats              = Statistiche
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = terzo intervallo
+
 title.passwordChanged   = La password \u00E8 stata cambiata
 title.passwordIncorrect = Password non corretta
 
 tooltip.insecureprotocol = Questa connessione non \u00E8 sicura.\r\nLe credenziali potrebbero essere compromesse.
+
+tooltipDecimals = decimale tooltip
+
+zeroLineColor = Colore della linea Zero
+
+zeroLineWidth = larghezza linea zero
+
+zeroValue = valore zero
