--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Conclus\u00E3o das atividades
 
 BOXPLOT = Boxplot
 
+BOXPLOT.xAxisTitle = Artigos da categoria
+BOXPLOT.yAxisTitle = Notas
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Artigos da categoria
+CALIFICATION_BAR.yAxisTitle = Utilizador registado #
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Hist\u00F3rico
 
 GRADE_REPORT_TABLE = Notas
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = Lines
 
+LINE.xAxisTitle = Artigos da categoria
+LINE.yAxisTitle = Notas
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
 
 STACKED_BAR = Bar Empilhados
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Hist\u00F3rico
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Artigos da categoria
+VIOLIN.yAxisTitle = Notas
+
+borderLength = Espessura da linha
+
+borderSpace = Espa\u00E7amento entre linhas
 
 btn.clear    = Claro
 btn.enter    = Entrar
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Sair
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = Calcular max
 
 chart.mean                = Significar
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
 choiceBox.YEAR_WEEK    = Semanas
 
+cutGrade = Grau de passagem
+
+displayXScaleTitle = T\u00EDtulo X eixo
+
+displayYScaleTitle = T\u00EDtulo do eixo Y
+
+emptyGradeColor = Cor grau vazia
+
 error.fields            = Voc\u00EA tem que completar todos os campos.
 error.generateCharts    = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
 error.generatedataset   = Erro ao construir o conjunto de dados.
@@ -90,9 +127,33 @@ error.savecsvfiles      = Os dados n\u00E3o puderam ser exportados no formato CS
 error.updateofflinemode = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
 error.userdata          = Erro ao recuperar dados do usu\u00E1rio.
 
+failGradeColor = Falhando cor grau
+
+firstInterval = primeiro intervalo
+
+fontColorXScaleTitle = cor da fonte eixo X-
+
+fontColorYScaleTitle = Fonte cor Y-eixo
+
+fourthInterval = quarto intervalo
+
+generalActive = estat\u00EDsticas gerais
+
+groupActive = Estat\u00EDsticas de grupo
+
 header.passwordChangedMessage   = Detectado foi senha alterada
 header.passwordDateTime         = Senha da data anterior:
 header.passwordIncorrectMessage = Senha incorreta
+
+horizontalMode = modo horizontal
+
+initialGroups = Grupos iniciais
+
+initialLastActivity = \u00FAltimos conex\u00F5es
+
+initialRoles = Roles iniciais
+
+initialTypeTimes = unidade de tempo padr\u00E3o
 
 label.activity                    = \u00DAltima conex\u00E3o:
 label.categoryitem                = Categoria / Item:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
-label.participants                = Participantes
+label.participants                = N\u00BA Participantes
 label.pass                        = Senha:
 label.rol                         = Rol:
 label.savelocal                   = Salvando em locais ...
@@ -130,6 +191,8 @@ label.user                        = Usu\u00E1rio:
 label.welcome                     = Bem vinda
 label.withcompletion              = Completed Act.
 label.withhidden                  = Com oculto\r\n\r\n\r\n
+
+legendActive = Legenda do gr\u00E1fico
 
 log.component.activity_report                                   = Relat\u00F3rio de atividades
 log.component.assignment                                        = Trabalho
@@ -586,7 +649,7 @@ menu.edit           = Editar
 menu.exit           = Sa\u00EDda
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exportar dados CSV...
-menu.file           = Arquivo
+menu.file           = _Arquivo
 menu.help           = Socorro
 menu.importconfig   = Import configuration...
 menu.logout         = Sair
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Oficina
 
+moreMax = M\u00E1ximo
+
+passGradeColor = Passando cor grau
+
+secondInterval = Segundo intervalo
+
 tab.activityCompletion = Conclus\u00E3o das atividades
 tab.component          = Componentes
 tab.coursemodule       = M\u00F3dulos do curso
@@ -629,6 +698,7 @@ tab.event              = Eventos
 tab.grades             = Notas
 tab.logs               = Logs
 tab.section            = Se\u00E7\u00E3o
+tab.visualization      = Visual analytic
 
 text.all                = Todos
 text.betweendates       = Between {0} and {1}
@@ -657,7 +727,17 @@ text.stats              = Estat\u00EDsticas
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = terceiro intervalo
+
 title.passwordChanged   = Senha foi alterada
 title.passwordIncorrect = Senha incorreta
 
 tooltip.insecureprotocol = Esta conex\u00E3o n\u00E3o \u00E9 segura.\r\nCredenciais podem estar comprometidas.
+
+tooltipDecimals = decimal dica
+
+zeroLineColor = Zero cor de linha
+
+zeroLineWidth = largura da linha de zero
+
+zeroValue = valor Zero
