--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -3,9 +3,18 @@ ACTIVITIES_TABLE = Ach\u00E8vement d'activit\u00E9s
 
 BOXPLOT = Boxplot
 
+BOXPLOT.xAxisTitle = Articles de grade
+BOXPLOT.yAxisTitle = Grades
+
 CALIFICATION_BAR = Grades %
 
+CALIFICATION_BAR.xAxisTitle = Articles de grade
+CALIFICATION_BAR.yAxisTitle = # Utilisateur Enrolled
+
 CUM_LINE = Cumulative Log
+
+CUM_LINE.xAxisTitle = {0}
+CUM_LINE.yAxisTitle = Journaux
 
 GRADE_REPORT_TABLE = Grades
 
@@ -15,15 +24,33 @@ GROUP_VIOLIN = Violin Groups
 
 HEAT_MAP = Heatmap
 
+HEAT_MAP.xAxisTitle = {0}
+
 LINE = Lignes
 
+LINE.xAxisTitle = Articles de grade
+LINE.yAxisTitle = Grades
+
 MEAN_DIFF = Relative Cum.
+
+MEAN_DIFF.xAxisTitle = {0}
+MEAN_DIFF.yAxisTitle = Journaux
 
 RADAR = Radar
 
 STACKED_BAR = Bar Empil\u00E9e
 
+STACKED_BAR.xAxisTitle = {0}
+STACKED_BAR.yAxisTitle = Journaux
+
 VIOLIN = Violin
+
+VIOLIN.xAxisTitle = Articles de grade
+VIOLIN.yAxisTitle = Grades
+
+borderLength = Largeur de ligne
+
+borderSpace = Interligne
 
 btn.clear    = Clair
 btn.enter    = Entrer
@@ -43,6 +70,8 @@ button.apply   = Apply
 button.logout  = Connectez - Out
 button.restore = Restore Defaults
 button.save    = Save
+
+calculateMax = Calculer max
 
 chart.mean                = Signifier
 
@@ -75,6 +104,14 @@ choiceBox.YEAR_MONTH   = Mois
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semaines
 
+cutGrade = Niveau de passe
+
+displayXScaleTitle = Titre de l'axe X
+
+displayYScaleTitle = Titre de l'axe Y
+
+emptyGradeColor = Couleur qualit\u00E9 vide
+
 error.fields            = Vous devez remplir tous les champs.
 error.generateCharts    = Impossible de g\u00E9n\u00E9rer des graphiques.
 error.generatedataset   = Erreur lors de la construction du jeu de donn\u00E9es.
@@ -90,9 +127,33 @@ error.savecsvfiles      = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es
 error.updateofflinemode = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
 error.userdata          = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
 
+failGradeColor = couleur de qualit\u00E9 \u00E0 d\u00E9faut
+
+firstInterval = premier intervalle
+
+fontColorXScaleTitle = X-axe de la couleur de la police
+
+fontColorYScaleTitle = Font couleur axe Y
+
+fourthInterval = quatri\u00E8me intervalle
+
+generalActive = statistiques g\u00E9n\u00E9rales
+
+groupActive = Statistiques des groupes
+
 header.passwordChangedMessage   = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
 header.passwordDateTime         = Date pr\u00E9c\u00E9dente mot de passe:
 header.passwordIncorrectMessage = Mot de passe incorrect
+
+horizontalMode = mode horizontal
+
+initialGroups = Groupes initiaux
+
+initialLastActivity = connexions derni\u00E8res
+
+initialRoles = Le r\u00F4le initial
+
+initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
 
 label.activity                    = Derni\u00E8re connexion:
 label.categoryitem                = Cat\u00E9gorie / article:
@@ -116,7 +177,7 @@ label.loggedin                    = Logged in:
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
-label.participants                = Participants
+label.participants                = N\u00BA Participants
 label.pass                        = Mot de passe:
 label.rol                         = Rol:
 label.savelocal                   = \u00C9conomiser en local ...
@@ -130,6 +191,8 @@ label.user                        = Utilisateur:
 label.welcome                     = Bienvenue
 label.withcompletion              = Completed Act.
 label.withhidden                  = Avec cach\u00E9
+
+legendActive = Graphique l\u00E9gende
 
 log.component.activity_report                                   = Activit\u00E9s du cours
 log.component.assignment                                        = Devoir
@@ -586,7 +649,7 @@ menu.edit           = modifier
 menu.exit           = Sortie
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exporter des donn\u00E9es CSV...
-menu.file           = Fichier
+menu.file           = _Fichier
 menu.help           = Aidez-moi
 menu.importconfig   = Import configuration...
 menu.logout         = Connectez - Out
@@ -622,6 +685,12 @@ module.url         = URL
 module.wiki        = Wiki
 module.workshop    = Atelier
 
+moreMax = Maximum
+
+passGradeColor = En passant la couleur de qualit\u00E9
+
+secondInterval = deuxi\u00E8me intervalle
+
 tab.activityCompletion = Ach\u00E8vement d'activit\u00E9s
 tab.component          = Composants
 tab.coursemodule       = Modules de cours
@@ -629,6 +698,7 @@ tab.event              = \u00C9v\u00E9nements
 tab.grades             = Les notes
 tab.logs               = Les journaux
 tab.section            = Section
+tab.visualization      = Visual analytic
 
 text.all                = Tout
 text.betweendates       = Between {0} and {1}
@@ -657,7 +727,17 @@ text.stats              = Statistiques
 text.withconnection     = Mode: Online
 text.withoutconnection  = Mode: Offline
 
+thirdInterval = Troisi\u00E8me intervalle
+
 title.passwordChanged   = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 title.passwordIncorrect = Mot de passe incorrect
 
 tooltip.insecureprotocol = Cette connexion n'est pas s\u00E9curis\u00E9e.\r\nLes informations d'identification peuvent \u00EAtre compromises.
+
+tooltipDecimals = infobulle d\u00E9cimal
+
+zeroLineColor = Couleur de la ligne z\u00E9ro
+
+zeroLineWidth = largeur de la ligne z\u00E9ro
+
+zeroValue = valeur z\u00E9ro
